# Antiderivative_web_project

./: ProjectProposal.md  README.md  pyproject.toml
_server/core/: admin.py  models.py  solving.py  urls.py  views.py
_server/core/migrations/: 0001_initial.py  0002_remove_antiderivative_user_antiderivativefilled.py  0003_filledantiderivative_filledconstant_and_more.py  0004_rename_latextext_antiderivative_inputlatex_and_more.py  0005_remove_constant_value_delete_filledconstant.py
_server/registration/templates/registration/: base.html  sign_in.html  sign_up.html
client/: package-lock.json  package.json
client/src/: Antiderivative.jsx  App.jsx  FilledAntiderivative.jsx  History.jsx  Home.jsx  Solution.jsx  main.jsx  style.css
